--- a/.editorconfig
+++ b/.editorconfig
@@ -3,8 +3,8 @@ root = true
 
 [*]
 charset = utf-8
-indent_style = space
-indent_size = 2
+indent_style = tab
+indent_size = 3
 insert_final_newline = true
 trim_trailing_whitespace = true
 
@@ -12,5 +12,12 @@ trim_trailing_whitespace = true
 quote_type = single
 
 [*.md]
-max_line_length = off
+max_line_length = 120
 trim_trailing_whitespace = false
+
+[*.json]
+indent_style = space
+indent_size = 2
+
+[*.tokens]
+end_of_line = lf
