--- a/.editorconfig
+++ b/.editorconfig
@@ -7,12 +7,18 @@ indent_style = tab
 indent_size = 3
 insert_final_newline = true
 trim_trailing_whitespace = true
+max_line_length = 120
 
 [*.ts]
 quote_type = single
 
+[*.js]
+quote_type = single
+
+[*.scss]
+quote_type = single
+
 [*.md]
-max_line_length = 120
 trim_trailing_whitespace = false
 
 [*.json]
