--- a/package.json
+++ b/package.json
@@ -35,21 +35,16 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.7",
-    "@angular-eslint/builder": "17.4.1",
-    "@angular-eslint/eslint-plugin": "17.4.1",
-    "@angular-eslint/eslint-plugin-template": "17.4.1",
-    "@angular-eslint/schematics": "17.4.1",
-    "@angular-eslint/template-parser": "17.4.1",
     "@angular/cli": "^17.3.7",
     "@angular/compiler-cli": "^17.3.0",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@eslint/js": "^9.5.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
-    "@typescript-eslint/eslint-plugin": "7.8.0",
-    "@typescript-eslint/parser": "7.8.0",
-    "eslint": "^8.57.0",
+    "angular-eslint": "^18.3.1",
+    "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
@@ -61,6 +56,8 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "karma-spec-reporter": "^0.0.36",
     "prettier": "3.2.5",
-    "typescript": "~5.4.2"
+    "prettier-eslint": "^16.3.0",
+    "typescript": "~5.4.2",
+    "typescript-eslint": "^8.8.0"
   }
 }
